Fixed main body text overflowing over the background image.

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -15,7 +15,7 @@
     display: flex;
     list-style: none;
     padding-left: 0;
-    gap: 20px;
+    gap: 1.5rem;
 }
 
 .nav-link-text {
@@ -77,6 +77,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.3); /* Adjusts opacity */
+    background-color: rgba(255, 255, 255, 1); /* Adjusts opacity */
     z-index: -1;
   }
